ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - jackmuratore.com
      - www.jackmuratore.com
      secretName: jackmuratore-tls
  rules:
  - host: jackmuratore.com
    http:
      paths:
      - backend:
          serviceName: jackmuratore
          servicePort: 80
  - host: www.jackmuratore.com
    http:
      paths:
      - backend:
          serviceName: jackmuratore
          servicePort: 80
